--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Hot Dogs / Cold Dogs</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="import" href="cold_export.html">
     </head>
     <body>
         <div class="container-fluid">
@@ -21,12 +22,9 @@
                     </form>
                 </div>
                 <div class="col-4" style="border:1px solid black;">
+                    <iframe id="serviceFrameSend" src="file:///hot_export.html"></iframe>
                 </div>
             </div>
         </div>
-    {% for table in tables %}
-        {{titles[loop.index]}}
-        {{ table|safe }}
-    {% endfor %}
     </body>
 </html>
